# fp-lab1

./: README.MD
.github/workflows/: CI.yml
p12/: .ocamlformat  README.md  dune  dune-project  solution.py
p12/lib/: dune  iterative.ml  lazy.ml  map.ml  module.ml  rec.ml  tailrec.ml
p12/test/: dune  test_p12.ml
p19/: README.md  dune-project  p19.opam  solution.py
p19/lib/: date.ml  date.mli  dune  iterative.ml  map.ml  module.ml  rec.ml  tailrec.ml
